--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,14 @@ __pycache__/
 # 学習済みモデル
 *.pth
 
-# アップロードされた画像とデータセット
+# アップロードされた画像
 app/static/uploads/
-dataset/
+
+# データセットの画像ファイルは無視するが、ディレクトリ構造は残す
+dataset/*/*.jpg
+dataset/*/*.jpeg
+dataset/*/*.png
+!dataset/*/.gitkeep
 
 # OS-specific
 .DS_Store
